# puppy-browser

./: Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  release.yml  test.yml
docs/: README.md  how-to-release.md  setup-dev.md
examples/: dom.html  jump.html  sample.html
scripts/: prepare-v8.sh
src/: cli.rs  common.rs  core.rs  dom.rs  fetch.rs  html.rs  javascript.rs  js.rs  lib.rs  main.rs  resource.rs  source.rs  tui.rs  ui.rs  url.rs  util.rs  window.rs
src/cli/: logger.rs  opts.rs  subcommand.rs
src/cli/subcommand/: build.rs  completion.rs  javascript.rs  js.rs  open.rs  simulate.rs
src/common/: html.rs  layout.rs  style.rs  window.rs
src/common/dom/: chardata.rs  document.rs  element.rs  exception.rs  node.rs
src/core/: css.rs  dom.rs  fetch.rs  html.rs  layout.rs  style.rs  url.rs  window.rs
src/core/dom/: chardata.rs  document.rs  element.rs  node.rs
src/dom/: chardata.rs  document.rs  element.rs  exception.rs  node.rs
src/javascript/: api.rs  binding.rs  runtime.rs  v8_init.rs
src/javascript/binding/: console.rs  document.rs  dom.rs  window.rs
src/js/: binding.rs  runtime.rs
src/js/binding/: console.rs  window.rs
src/primitive/dom/: document.rs
src/tui/: api.rs  browser_view.rs  components.rs  logger.rs  page_view.rs  render.rs  views.rs
src/tui/components/: alert.rs  input.rs  link.rs
src/tui/render/: a.rs  button.rs  i.rs  input.rs
src/ui/: browser_view.rs  components.rs  navigate.rs  navigation.rs  page.rs  page_view.rs  render.rs  theme.rs  traits.rs
(+10 files in other folders)
