[package]
name = "puppy"
version = "0.1.0"
authors = ["Takashi Yoneuchi <takashi.yoneuchi@shift-js.info>"]
edition = "2018"

[[bin]]
name = "puppy"
test = false
bench = false

[dependencies]
log = "0.4"
fern = "0.5"
chrono = "0.4"
clap-verbosity-flag = "0.3.1"
structopt = "0.3.21"
thiserror = "1.0"
combine = "4.5.2"
cursive = { git = "https://github.com/gyscos/cursive" }
cursive-aligned-view = "0.4.0"
num-traits = "0.2"
num-derive = "0.3"
url = "2.2.1"
reqwest = { version = "0.11", features = ["blocking"] }
unicode-width = "0.1.8"
rusty_v8 = "0.22.1"
crossbeam-channel = "0.5.1"